src/snapshots/hostlist_parser__tests__Leading 0s.snap
---
source: src/lib.rs
expression: "parse(\"OST01[00,01]\")"
---
Ok(
    [
        "OST0100",
        "OST0101",
    ],
)
