src/snapshots/hostlist_parser__tests__Missing closing brace.snap
---
source: src/lib.rs
expression: "parse(\"hostname[1\")"
---
Err(
    Errors {
        position: 10,
        errors: [
            Unexpected(
                Static(
                    "end of input",
                ),
            ),
            Expected(
                Token(
                    ',',
                ),
            ),
            Expected(
                Token(
                    ']',
                ),
            ),
        ],
    },
)
