src/snapshots/hostlist_parser__tests__Multiple IPv6 literals.snap
---
source: src/lib.rs
expression: "parse(\"2001:db8::1, 2001:db8::2\")"
---
Ok(
    [
        "2001:db8::1",
        "2001:db8::2",
    ],
)
