src/snapshots/hostlist_parser__tests__No separation between comma's.snap
---
source: src/lib.rs
expression: "parse(\"hostname[1,,2].iml.com\")"
---
Err(
    Errors {
        position: 11,
        errors: [
            Unexpected(
                Token(
                    ',',
                ),
            ),
            Expected(
                Static(
                    "whitespaces",
                ),
            ),
            Expected(
                Static(
                    "digit",
                ),
            ),
            Unexpected(
                Token(
                    '1',
                ),
            ),
        ],
    },
)
