src/snapshots/hostlist_parser__tests__Padding with a single and double digit number.snap
---
source: src/lib.rs
assertion_line: 434
expression: "parse(\"hostname[06-10]\")"

---
Ok(
    [
        "hostname06",
        "hostname07",
        "hostname08",
        "hostname09",
        "hostname10",
    ],
)
