src/snapshots/hostlist_parser__tests__Single item with prefix range starting at 0.snap
---
source: src/lib.rs
expression: "parse(\"test[000-002].localdomain\")"
---
Ok(
    {
        "test000.localdomain",
        "test001.localdomain",
        "test002.localdomain",
    },
)
