src/snapshots/hostlist_parser__tests__Single item with three ranges separated by character.snap
---
source: src/lib.rs
assertion_line: 412
expression: "parse(\"hostname[1,2]-[3-4]-[5,6].iml.com\")"

---
Ok(
    [
        "hostname1-3-5.iml.com",
        "hostname1-3-6.iml.com",
        "hostname1-4-5.iml.com",
        "hostname1-4-6.iml.com",
        "hostname2-3-5.iml.com",
        "hostname2-3-6.iml.com",
        "hostname2-4-5.iml.com",
        "hostname2-4-6.iml.com",
    ],
)
